--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cafe Menu</title>
-    <style></style>
+    <link href="style.css">
 </head>
 <body>
+<div>
+
+</div>
     <main>
         <h1>CAMPER CAFE</h1>
         <p>Est. 2020</p>
