--- a/index.html
+++ b/index.html
@@ -7,15 +7,19 @@
     <link href="style.css">
 </head>
 <body>
-<div>
-
-</div>
+<div class="menu">
     <main>
         <h1>CAMPER CAFE</h1>
         <p>Est. 2020</p>
         <section>
             <h2>Coffee</h2>
+            <article>
+                <p>French Vanilla</p>
+                <p>3.00</p>
+            </article>
         </section>
     </main>
+</div>
+
 </body>
 </html>
