--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <main>
         <h1>CAMPER CAFE</h1>
         <p class="established">Est. 2020</p>
+        <hr>
         <section>
             <h2>Coffee</h2>
             <article class="item">
@@ -45,6 +46,9 @@
             </article>
         </section>
     </main>
+    <footer>
+        <p><a href="https://www.freecodecamp.org"/>Visit our website</a></p>
+    </footer>
 </div>
 
 </body>
